--- a/nav2_gps_waypoint_follower_demo/config/dual_ekf_navsat_params.yaml
+++ b/nav2_gps_waypoint_follower_demo/config/dual_ekf_navsat_params.yaml
@@ -2,8 +2,8 @@
 
 ekf_filter_node_odom:
   ros__parameters:
-    frequency: 8.0
-    sensor_timeout: 1.0
+    frequency: 8.0 # TODO na robotovi byla frekvence zvednuta na 15, a zakomentovany timeout
+    sensor_timeout: 1.0 # TODO maybe lower this so IMU has no effect when stuck
     two_d_mode: true # Recommended to use 2d mode for nav2 in mostly planar environments
     print_diagnostics: true
     #debug: false
@@ -33,7 +33,7 @@ ekf_filter_node_odom:
                   false,  false,  false]
     imu0_differential: false  # If using a real robot you might want to set this to true, since usually absolute measurements from real imu's are not very accurate
     imu0_relative: false
-    imu0_queue_size: 10
+    imu0_queue_size: 10 # TODO na robotovi bylo 2 (original 10)
     #imu0_remove_gravitational_acceleration: true
     imu0_remove_gravitational_acceleration: false
 
@@ -128,5 +128,5 @@ navsat_transform:
     zero_altitude: true
     broadcast_utm_transform: true
     publish_filtered_gps: true
-    use_odometry_yaw: true
+    use_odometry_yaw: true # is this the cause of the jumping??
     wait_for_datum: false 
