--- a/nav2_gps_waypoint_follower_demo/config/nav2_no_map_params.yaml
+++ b/nav2_gps_waypoint_follower_demo/config/nav2_no_map_params.yaml
@@ -10,7 +10,7 @@ bt_navigator:
   ros__parameters:
     global_frame: map
     robot_base_frame: base_link
-    odom_topic: /odom
+    odom_topic: /diff_cont/odom #/odom
     bt_loop_duration: 10
     default_server_timeout: 20
     navigators: ["navigate_to_pose", "navigate_through_poses"]
@@ -59,7 +59,7 @@ bt_navigator:
       - nav2_distance_traveled_condition_bt_node
       - nav2_single_trigger_bt_node
       - nav2_goal_updated_controller_bt_node
-      - nav2_is_battery_low_condition_bt_node
+      # - nav2_is_battery_low_condition_bt_node
       - nav2_navigate_through_poses_action_bt_node
       - nav2_navigate_to_pose_action_bt_node
       - nav2_remove_passed_goals_action_bt_node
@@ -73,14 +73,14 @@ bt_navigator:
       - nav2_back_up_cancel_bt_node
       - nav2_assisted_teleop_cancel_bt_node
       - nav2_drive_on_heading_cancel_bt_node
-      - nav2_is_battery_charging_condition_bt_node
+      # - nav2_is_battery_charging_condition_bt_node
     error_code_names:
       - compute_path_error_code
       - follow_path_error_code
 
 controller_server:
   ros__parameters:
-    controller_frequency: 20.0
+    controller_frequency: 10.0 # TODO original was 20.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
     min_theta_velocity_threshold: 0.001
@@ -205,7 +205,9 @@ global_costmap:
       rolling_window: True
       width: 50
       height: 50
-      track_unknown_space: true
+      # track_unknown_space: true # TODO DISABLE IF NO LIDAR IS USED # probably dissable anyway, since I want coverage server
+      track_unknown_space: false
+      # track_unknown_space: false # TODO use false for robot without obstacle sensors
       # no static map
       plugins: ["obstacle_layer", "inflation_layer"]
       obstacle_layer:
@@ -309,7 +311,7 @@ velocity_smoother:
     min_velocity: [-0.26, 0.0, -1.0]
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
-    odom_topic: "odom"
+    odom_topic: "/diff_cont/odom" # "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
