--- a/nav2_gps_waypoint_follower_demo/config/nav2_no_map_params.yaml
+++ b/nav2_gps_waypoint_follower_demo/config/nav2_no_map_params.yaml
@@ -105,7 +105,9 @@ controller_server:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.25
       # yaw_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.5
+      # yaw_goal_tolerance: 0.5
+      yaw_goal_tolerance: 3.14 # completely ignore yaw - it is not really needed
+      #                        # it causes problems when the map or imu is not aligned correctly  
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
